[gd_scene load_steps=14 format=3 uid="uid://h48nhbbqgk4k"]

[ext_resource type="Script" path="res://scripts/droplet.gd" id="1_8ilkq"]
[ext_resource type="Texture2D" uid="uid://cmqolg48kicir" path="res://graphics/spritesheets/droplet.png" id="2_syt7p"]
[ext_resource type="PackedScene" uid="uid://dhber54gts68q" path="res://scenes/attack_box.tscn" id="3_v2del"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e8bg6"]
resource_local_to_scene = true
size = Vector2(6, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbi37"]
atlas = ExtResource("2_syt7p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivfbn"]
atlas = ExtResource("2_syt7p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gkd7"]
atlas = ExtResource("2_syt7p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlpkw"]
atlas = ExtResource("2_syt7p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c12y"]
atlas = ExtResource("2_syt7p")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b28fj"]
atlas = ExtResource("2_syt7p")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mayu"]
atlas = ExtResource("2_syt7p")
region = Rect2(96, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ffsm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbi37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivfbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gkd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlpkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c12y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b28fj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mayu")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xn78d"]
resource_local_to_scene = true
size = Vector2(6, 4)

[node name="Droplet" type="Area2D"]
script = ExtResource("1_8ilkq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_e8bg6")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 1, 0.117647, 1)
texture_filter = 1
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_2ffsm")
autoplay = "default"
offset = Vector2(0, 8)

[node name="AttackBox" parent="." node_paths=PackedStringArray("attacker") instance=ExtResource("3_v2del")]
collision_layer = 2
collision_mask = 24
monitoring = true
attacker = NodePath("..")

[node name="CollisionShape2D" parent="AttackBox" index="0"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_xn78d")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="AttackBox" to="." method="_on_attack_box_area_entered"]

[editable path="AttackBox"]
